--- a/_posts/2019-12-31-the-us-narrative-today.html
+++ b/_posts/2019-12-31-the-us-narrative-today.html
@@ -1287,107 +1287,107 @@ stories:
   domain: http://www.seguingazette.com/
   link: http://seguingazette.com/announcements/obituaries/article_bc1c97d0-2bde-11ea-b9cb-2f78ba51e07e.html
 images:
-- name: oldhouse-oldhouse-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-blue-electricity.jpg
-- name: beach-clouds-lifeguard-beachclouds-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-space-pizza.jpg
-- name: oldhotel-oldhotel-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-purp-paper.jpg
-- name: abandonedbuildings_constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_constitution.jpg
-- name: ellis-island-ellisisland-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-ww2-color.jpg
-- name: stalin-time-high-speed-train-station-france.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-high-speed-train-station-france.jpg
-- name: razorwire-DSC-0080-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-bright-sand.jpg
-- name: stalin-time-path-in-woods-green-lush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-path-in-woods-green-lush.jpg
-- name: ellis-island-ellis-island-room-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-soul.jpg
-- name: bf-skinner-volkswagon-microbus-windows.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-volkswagon-microbus-windows.jpg
-- name: gypsy-wagon-gypsywagon-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-far-away.jpg
-- name: old-granary-field-oldhouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-aqua.jpg
-- name: stories-new-79-110-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-79-110-800-500-0-max-0--5--1.jpg
-- name: fence-mexico-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-plentiful.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-granite.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit.jpg
-- name: stories-new-old-door-lock-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-old-door-lock-smoking-cigarette.jpg
-- name: oldcabin-store-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-ww2-color.jpg
-- name: art-museum-art-museum-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-alien-goggles.jpg
-- name: stories-berlin-wall-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-berlin-wall-graham-sutherland.jpg
-- name: oldhotel-oldhotel-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-neo-instinct.jpg
-- name: wind-mills-windmills-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-atari-missle.jpg
-- name: border-crossing-bordercrossing-oily-mcoilface.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-oily-mcoilface.png
-- name: legal-statue-legalstatue-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-colorful-blocks.jpg
-- name: fence-fence-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dali-two.jpg
-- name: birdhouse-birdhouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-aqua.jpg
-- name: la-muse-jesus-in-old-rock-church.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-jesus-in-old-rock-church.jpg
-- name: stalin-time-dinosaur-stepping-on-lego.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dinosaur-stepping-on-lego.jpg
-- name: braceros-domingo-ulloa-capital_36728421355_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-capital_36728421355_o.jpg
-- name: statue-of-liberty-front-view-statueofliberty-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-bright-sand.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-ww2-dresden.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-alien-goggles.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-- name: old-barn-old-barn-1500-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dali-three.jpg
-- name: bf-skinner-castle-on-the-hill-windows.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-castle-on-the-hill-windows.jpg
-- name: copper-circuit-IMG_7788.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7788.jpg
-- name: miamibeach-miamibeach-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-smoking-cigarette.jpg
-- name: braceros-domingo-ulloa-statue-playing-instrument.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-statue-playing-instrument.jpg
-- name: braceros-domingo-ulloa-castle-clouds-green-lawn.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-castle-clouds-green-lawn.jpg
-- name: power-lines-power-lines-empty-space-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-ww2-color.jpg
+- name: sand-hand-sand-hand-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-crabapple.jpg
+- name: bf-skinner-container-several-colors-grey.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-container-several-colors-grey.jpg
+- name: containership-bw-storytelling-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling-colorful-blocks.png
+- name: nazi-invasion-satellite-with-sunset.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-satellite-with-sunset.jpg
+- name: berlinwall-DSC-0084-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-wols.jpg
+- name: crow_smooth_ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_smooth_ride.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
+- name: capital-battle-capitolbattle-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-clean-view.jpg
+- name: fence-mexico-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dry-skin.jpg
+- name: oldbarn-oldbarn-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-plentiful.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-hot-spicy.jpg
+- name: border-fence-border-fence-on-hill-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-green-zuma.jpg
+- name: paris-paris-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-diego-rivera1.jpg
+- name: school-clouds-church-clouds-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-purple-storm.jpg
+- name: old-school-house-old-schoolhouse-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-spagetti-accident.jpg
+- name: cargo-ship-cargo-ship-on-sea-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-marcel-duchamp.jpg
+- name: death-valley-death-valley-national-park-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dark-rain.jpg
 - name: curtain-curtain-oily-mcoilface.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-oily-mcoilface.jpg
-- name: capital-battle-capitolbattle-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dark-soul.jpg
-- name: aws-s3-stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
-- name: nazi-invasion-highway-granary-truck_36557728122_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-highway-granary-truck_36557728122_o.jpg
-- name: copper-circuit-lincoln-memorial_36690528196_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-lincoln-memorial_36690528196_o.jpg
-- name: subway-subway-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-creativity.jpg
-- name: oldsmallboat-oldsmallboat-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-ww2-dresden.jpg
-- name: aws-s3-stories-new-80-87-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-80-87-800-500-0-max-0--1--1.jpg
-- name: old-door-lock-old-door-lock-2-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-brush.jpg
-- name: bf-skinner-sailboat-in-front-of-housing.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-sailboat-in-front-of-housing.jpg
-- name: downtheline-downtheline-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-alberto-giacometti.jpg
+- name: white-house-whitehouse-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-blue-brush.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-creativity.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-creativity.png
+- name: curtain-curtain-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-kandinsky-bv.jpg
+- name: wind-mills-windmills-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-colorful-blocks.jpg
+- name: yosemite-yosemite-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-umberto-bocc.jpg
+- name: old-granary-field-granaryfield-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-rainbow-festival.jpg
+- name: bf-skinner-path-in-woods-green-lush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-path-in-woods-green-lush.jpg
+- name: power-lines-power-lines-empty-space-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-circuit-5.jpg
+- name: fence-fence-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-crunch-paper.jpg
+- name: liberty-back-statue-liberty-back-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-cinnamon-rolls.jpg
+- name: catacombs-catacombs-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-pablo-blue.jpg
+- name: nazi-invasion-old-broken-piano-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-broken-piano-street.jpg
+- name: gears-4882162452-fa3126b38d-b-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-emily-carr.jpg
+- name: rockingchair-rockingchair-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purple-pond.jpg
+- name: old-granary-field-granaryfield-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-smooth-ride.jpg
+- name: oldroad-old-road-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-crunch-paper.jpg
+- name: mosaic-face-mosaic-face-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purple-pond.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-post-modern.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-post-modern.JPG
+- name: downtown-trucksilo-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-kandinsky-bv.jpg
+- name: oldhotel-oldhotel-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-emily-carr.jpg
+- name: art-magnus-zeller-orator.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-magnus-zeller-orator.jpg
+- name: school-clouds-church-clouds-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-oily-mcoilface.jpg
+- name: docks-docks-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-diego-rivera1.jpg
+- name: catacombs-catacombs-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-hot-spicy.jpg
+- name: crow-crow-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-alien-goggles.jpg
+- name: bf-skinner-downtown-la_36349151230_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-downtown-la_36349151230_o.jpg
+- name: oldhouse-oldhouse-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-atari-missle.jpg
+- name: statue-of-liberty-front-view-statueofliberty-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-green-zuma.jpg
+- name: dc-statue-dcstatue-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-ww2-dresden.jpg
+- name: capital-battle-capitolbattle-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-crafty-painting.jpg
+- name: docks-docks-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-oily-mcoilface.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
+- name: oldhotel-oldhotel-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-yellow-paper.jpg
 ---
 Ferndale Kroger Kiosk Line.&nbsp;Franksgiving Benefits Local Veterans.&nbsp;Court Upholds Duluth Teacher's Sentence For Sexually Abusing Former Student.&nbsp;Longest Night Music Festival.&nbsp;Castro To Visit Charles City On Sunday.&nbsp;Evangelization Team Maps Out Marian Year.&nbsp;Winning Numbers Drawn In 'Rolling Cash 5' Game.&nbsp;Our Lady Of Guadalupe.&nbsp;
